test/functions/bradc/thisIntentStandalone.good
thisIntentStandalone.chpl:7: syntax error: 'this' intents can only be applied to methods, but 'foo' is not a method
thisIntentStandalone.chpl:11: syntax error: missing type for secondary type method 'bar'
